--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,8 @@ services:
       - N8N_EDITOR_BASE_URL=${EXTERNAL_IP}
       - WEBHOOK_URL=${EXTERNAL_IP}
       - N8N_DEFAULT_BINARY_DATA_MODE=filesystem
+    ports:
+      - "80:5678"
     volumes:
       - /root/n8n_data:/home/node/.n8n
       - /root/n8n_temp:/data/temp
