--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,7 @@ services:
       - N8N_EDITOR_BASE_URL=${EXTERNAL_IP}
       - WEBHOOK_URL=${EXTERNAL_IP}
       - N8N_DEFAULT_BINARY_DATA_MODE=filesystem
+      - N8N_HIDE_FORM_MAIN_HEADER=true
     ports:
       - "80:5678"
     volumes:
