--- a/compose.yml
+++ b/compose.yml
@@ -14,4 +14,5 @@ services:
     volumes:
       - /root/n8n/n8n_data:/home/node/.n8n
       - /root/n8n/n8n_temp:/data/temp
+      - /root/n8n/n8n_scripts:/data/scripts
     restart: unless-stopped
